Minimum Java version changed from 1.8 to 11.